@startuml
interface SudokuPersistencePort {
   + void saveSudoku(Sudoku sudoku)
   + List<SudokuSaveEntry> getAllSudokus()
   + Optional<SudokuSaveEntry> getSudoku(String saveId)
   + void deleteSudoku(String saveId)
}

class SudokuPersistenceAdapter {
    + void saveSudoku(Sudoku sudoku)
    + List<SudokuSaveEntry> getAllSudokus()
    + Optional<SudokuSaveEntry> getSudoku(String saveId)
    + void deleteSudoku(String saveId)
}

class AbortAction {
  + void executeAction(Sudoku sudoku)
	+ boolean isCloseGame()
}

class MenuDialogService {
    + void startMenuDialog()
}

class SudokuSelectionDialog {
    + Optional<SudokuSaveEntry> selectSudokuDialog()
}

SudokuPersistenceAdapter --|> SudokuPersistencePort
AbortAction --> SudokuPersistencePort
MenuDialogService --> SudokuPersistencePort
SudokuSelectionDialog --> SudokuPersistencePort
@enduml
